Setting up divs in index file

--- a/first/index.html
+++ b/first/index.html
@@ -8,6 +8,48 @@
   <link rel="stylesheet" href="style.css">
 </head>
 <body>
+  <!--Three boxes-->
+  <div class="container three-boxes">
+    <div class="box red">
+
+    </div>
+    <div class="box blue">
+
+    </div>
+    <div class="box grey">
+
+    </div>
+  </div>
+  <!--Main Paragraph-->
+  <div class="container main">
+    <div class="main">
+
+    </div>
+  </div>
+<!--Two Colored Blocks-->
+<div class="container two-blocks">
+  <div class="left-red-box">
+
+  </div>
+  <div class="right-blue-box">
+
+  </div>
+  <!--Footer-->
+  <div class="container footer">
+    <div class ="left-blue-box">
+
+    </div>
+    <div class="left-red-side">
+
+    </div>
+    <div class="center-gray-box">
+
+    </div>
+    <div class="right-red-side">
+
+    </div>
+  </div>
+</div>
 
 </body>
 </html>
