--- a/first/index.html
+++ b/first/index.html
@@ -23,7 +23,13 @@
   <!--Main Paragraph-->
   <div class="container main">
     <div class="main">
-
+      <p>
+        Lorem ipsum dolor sit amet, consectetur adipiscing elit. Quam ob rem tandem, inquit, non satisfacit? Sed quot homines, tot sententiae; Te ipsum, dignissimum maioribus tuis, voluptasne induxit, ut adolescentulus eriperes P. Quod si ita se habeat, non possit beatam praestare vitam sapientia. Duo Reges: constructio interrete.
+      </p>
+    </br>
+      <p>
+        Lorem ipsum dolor sit amet, consectetur adipiscing elit. Quam ob rem tandem, inquit, non satisfacit? Sed quot homines, tot sententiae; Te ipsum, dignissimum maioribus tuis, voluptasne induxit, ut adolescentulus eriperes P. Quod si ita se habeat, non possit beatam praestare vitam sapientia. Duo Reges: constructio interrete.
+      </p>
     </div>
   </div>
 <!--Two Colored Blocks-->
@@ -42,7 +48,7 @@
     <div class="left-red-side">
 
     </div>
-    <div class="center-gray-box">
+    <div class="center-grey-box">
 
     </div>
     <div class="right-red-side">
